--- a/adminPanel.html
+++ b/adminPanel.html
@@ -64,7 +64,7 @@
                     <li class="nav-link" id="userExpenseEdit">
                         <a href="./user_add_expense.html">
                             <i class='bx bx-edit-alt icon'></i>
-                            <span class="text nav-text">Редактировать расходы</span>
+                            <span class="text nav-text">Изменить расходы</span>
                         </a>
                     </li>
                     <li class="nav-link">
@@ -108,6 +108,13 @@
     <section class="home">
         <div class="text">Админ Панель</div>
         <div class="divtable"><ul class="tables"></ul></div>
+        <div class="infoText">
+            <h1 class="howToUse">Как использовать?</h1>
+            <p class="tutorial">
+                Для того, чтобы просмотреть, отредактировать или добавить информацию в базу данных - нажмите на одно из названий таблиц.
+                <br>
+                После чего выведется вся информация о этой таблицы из базы данных.</p>
+        </div>
     </section>
     
     
