--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                     <li class="nav-link" id="userExpenseEdit">
                         <a href="./user_add_expense.html">
                             <i class='bx bx-edit-alt icon'></i>
-                            <span class="text nav-text">Редактировать расходы</span>
+                            <span class="text nav-text">Изменить расходы</span>
                         </a>
                     </li>
                     <li class="nav-link" id="adminButton">
@@ -175,6 +175,28 @@
         <p class="c-para-regular info">Наш сайт по Анализу расходов - это мощный инструмент для управления своими
             финансами. С помощью нашего сайта вы сможете следить за своими расходами, анализировать свои финансовые
             данные и принимать решения на основе этих данных.</p>
+    </div>
+
+    <!-- === ContactInfo === -->
+    <div class="contact-info form-container">
+        <div class="numberphone">
+            <a class="number" href="tel:8 (845) 232-31-60">
+                <span>
+                    "Телефон: "
+                    <br>
+                    "8 (845) 232-31-60"
+                </span>
+            </a>
+        </div>
+        <div class="adress">
+            <a class="maps" href="https://www.google.com/maps/place/%D0%9E%D0%92%D0%9A+%D0%9C%D0%BE%D0%BD%D1%82%D0%B0%D0%B6/@51.5401318,46.0358881,15z/data=!4m2!3m1!1s0x0:0x59f56c2f5594ec4d?sa=X&ved=2ahUKEwi729mYjqz_AhWNg_0HHVVvB8IQ_BJ6BAhDEAc">
+                <span>
+                    "Адрес: "
+                    <br>
+                    "ул. Максима Горького, 76, Саратов"
+                </span>
+            </a>
+        </div>
     </div>
 
     <!-- === Cusrsor === -->
