--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 
             <div class="links">
                 <a href="./reset.html">Забыли пароль?</a>
-                <a href="./register.html">Нет аккаунта?</a>
+                <a href="./index.html">Нет аккаунта?</a>
             </div>
 
             <input type="button" value="Войти" readonly="readonly" onclick="SignIn()">
