--- a/aboutUs.html
+++ b/aboutUs.html
@@ -65,7 +65,7 @@
                     <li class="nav-link" id="userExpenseEdit">
                         <a href="./user_add_expense.html">
                             <i class='bx bx-edit-alt icon'></i>
-                            <span class="text nav-text">Редактировать расходы</span>
+                            <span class="text nav-text">Изменить расходы</span>
                         </a>
                     </li>
                     <li class="nav-link" id="adminButton">
@@ -123,7 +123,7 @@
                 <div class="icons">
                     <a href="#"><i class="ri-messenger-fill"></i></a>
                     <a href="#"><i class="ri-whatsapp-fill"></i></a>
-                    <a href="#"><i class="ri-instagram-fill"></i></a>
+                    <a href="#"><i class="ri-phone-fill"></i></a>
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
                 <div class="icons">
                     <a href="#"><i class="ri-messenger-fill"></i></a>
                     <a href="#"><i class="ri-whatsapp-fill"></i></a>
-                    <a href="#"><i class="ri-instagram-fill"></i></a>
+                    <a href="#"><i class="ri-phone-fill"></i></a>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                 <div class="icons">
                     <a href="https://vk.com/idlexfeed"><i class="ri-messenger-fill"></i></a>
                     <a href="https://t.me/idlexfeed"><i class="ri-telegram-fill"></i></a>
-                    <a href="https://www.instagram.com/idlexfeed_/"><i class="ri-instagram-fill"></i></a>
+                    <a href="tel:+7 (987) 305-24-94"><i class="ri-phone-fill"></i></a>
                 </div>
             </div>
         </div>
