--- a/chart.html
+++ b/chart.html
@@ -38,10 +38,10 @@
 
         <div class="menu-bar">
             <div class="menu">
-                <li class="search-box">
-                    <i class='bx bx-search-alt icon'></i>
-                    <input type="search" placeholder="Поиск...">
-                </li>
+                <!-- <li class="search-box">
+                        <i class='bx bx-search-alt icon'></i>
+                        <input type="search" placeholder="Поиск...">
+                </li> -->
                 <ul class="menu-links">
                     <li class="nav-link">
                         <a href="./home.html">
