--- a/table.html
+++ b/table.html
@@ -16,105 +16,106 @@
 </head>
 
 <body>
-    <!-- === Transitions === -->
-    <!-- <div class="transition transition-3 is-active"></div> -->
+    <div class="scroll-container">
+        <!-- === Transitions === -->
+        <!-- <div class="transition transition-3 is-active"></div> -->
 
-    <!-- === Navbar === -->
-    <nav class="sidebar close">
-        <header>
-            <div class="image-text">
-                <span class="image">
-                    <img id="profilePhoto" src="">
-                </span>
+        <!-- === Navbar === -->
+        <nav class="sidebar close">
+            <header>
+                <div class="image-text">
+                    <span class="image">
+                        <img id="profilePhoto" src="">
+                    </span>
 
-                <div class="text header-text">
-                    <span class="name"></span>
-                    <span class="profession">Добро пожаловать</span>
+                    <div class="text header-text">
+                        <span class="name"></span>
+                        <span class="profession">Добро пожаловать</span>
+                    </div>
+                </div>
+
+                <i class='bx bx-chevron-right toggle'></i>
+            </header>
+
+            <div class="menu-bar">
+                <div class="menu">
+                    <!-- <li class="search-box">
+                        <i class='bx bx-search-alt icon'></i>
+                        <input type="search" placeholder="Поиск...">
+                    </li> -->
+                    <ul class="menu-links">
+                        <li class="nav-link">
+                            <a href="./home.html">
+                                <i class='bx bx-home-alt icon'></i>
+                                <span class="text nav-text">Главная</span>
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="./aboutUs.html">
+                                <i class='bx bx-buildings icon'></i>
+                                <span class="text nav-text">О нас</span>
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="./chart.html">
+                                <i class='bx bx-bar-chart-square icon'></i>
+                                <span class="text nav-text">График Расходов</span>
+                            </a>
+                        </li>
+                        <li class="nav-link" id="userExpenseEdit">
+                            <a href="./user_add_expense.html">
+                                <i class='bx bx-edit-alt icon'></i>
+                                <span class="text nav-text">Изменить расходы</span>
+                            </a>
+                        </li>
+                        <li class="nav-link" id="adminButton">
+                            <a href="./adminPanel.html">
+                                <i class='bx bx-bug-alt icon'></i>
+                                <span class="text nav-text">Админ панель</span>
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="./settings.html">
+                                <i class='bx bx-cog icon'></i>
+                                <span class="text nav-text">Настройки</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="bottom-content">
+                    <li class="">
+                        <a href="./login.html">
+                            <i class='bx bx-log-out icon'></i>
+                            <span class="text nav-text">Выход</span>
+                        </a>
+                    </li>
+
+                    <li class="mode">
+                        <div class="moon-sun">
+                            <i class='bx bx-moon icon moon'></i>
+                            <i class='bx bx-sun icon sun'></i>
+                        </div>
+                        <span class="mode-text text">Темная тема</span>
+
+                        <div class="toggle-switch">
+                            <span class="switch"></span>
+                        </div>
+                    </li>
                 </div>
             </div>
+        </nav>
 
-            <i class='bx bx-chevron-right toggle'></i>
-        </header>
-
-        <div class="menu-bar">
-            <div class="menu">
-                <li class="search-box">
-                    <i class='bx bx-search-alt icon'></i>
-                    <input type="search" placeholder="Поиск...">
-                </li>
-                <ul class="menu-links">
-                    <li class="nav-link">
-                        <a href="./home.html">
-                            <i class='bx bx-home-alt icon'></i>
-                            <span class="text nav-text">Главная</span>
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="./aboutUs.html">
-                            <i class='bx bx-buildings icon'></i>
-                            <span class="text nav-text">О нас</span>
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="./chart.html">
-                            <i class='bx bx-bar-chart-square icon'></i>
-                            <span class="text nav-text">График Расходов</span>
-                        </a>
-                    </li>
-                    <li class="nav-link" id="userExpenseEdit">
-                        <a href="./user_add_expense.html">
-                            <i class='bx bx-edit-alt icon'></i>
-                            <span class="text nav-text">Изменить расходы</span>
-                        </a>
-                    </li>
-                    <li class="nav-link" id="adminButton">
-                        <a href="./adminPanel.html">
-                            <i class='bx bx-bug-alt icon'></i>
-                            <span class="text nav-text">Админ панель</span>
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="./settings.html">
-                            <i class='bx bx-cog icon'></i>
-                            <span class="text nav-text">Настройки</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="bottom-content">
-                <li class="">
-                    <a href="./login.html">
-                        <i class='bx bx-log-out icon'></i>
-                        <span class="text nav-text">Выход</span>
-                    </a>
-                </li>
-
-                <li class="mode">
-                    <div class="moon-sun">
-                        <i class='bx bx-moon icon moon'></i>
-                        <i class='bx bx-sun icon sun'></i>
-                    </div>
-                    <span class="mode-text text">Темная тема</span>
-
-                    <div class="toggle-switch">
-                        <span class="switch"></span>
-                    </div>
-                </li>
-            </div>
-        </div>
-    </nav>
-
-    <section class="home">
-        <div class="text" id="titleTable"></div>
-        <ul class="fields">
-            <li><button class="change">Сохранить</button></li>
-            <li><button class="modify">Изменить</button></li>
-            <li><button class="delete">Удалить</button></li>
-        </ul>
-        <ul class="listData"></ul>
-    </section>
-    
+        <section class="home">
+            <div class="text" id="titleTable"></div>
+            <ul class="fields">
+                <li><button class="change">Сохранить</button></li>
+                <li><button class="modify">Изменить</button></li>
+                <li><button class="delete">Удалить</button></li>
+            </ul>
+            <ul class="listData"></ul>
+        </section>
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -122,7 +123,7 @@
     <script src="./JS/home-switch.js"></script>
     <script src="./JS/navbar.js"></script>
     <script src="./JS/table.js"></script>
-    
+
     <!-- <script src="./JS/transitions.js"></script>  -->
 </body>
 
