--- a/user_add_expense.html
+++ b/user_add_expense.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <title>ОВК-Монтаж. Анализ Расходов</title>
     <link rel="stylesheet" href="./Styles/home.css">
-    <link rel="stylesheet" href="./Styles/user_add_expense.css">
     <link rel="stylesheet" href="./Styles/table.css">
+    <!-- <link rel="stylesheet" href="./Styles/user_add_expense.css"> -->
     <link rel="stylesheet" href="Styles/transitions.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Images/OnlyLogo.png">
